<resources>
    <string name="app_name">PVT.MyDZ</string>
    <string name="dz0">DZ 0</string>
    <string name="dz1">DZ 1</string>
    <string name="dz2">DZ 2</string>
    <string name="dz3">DZ 3</string>
    <string name="dz4">DZ 4</string>
    <string name="dz5">DZ 5</string>
    <string name="dz6">DZ 6</string>
    <string name="dz7">DZ 7</string>
    <string name="dz8">DZ 8</string>
    <string name="dz9">DZ 9</string>
    <string name="dz10">DZ 10</string>
    <string name="dz11">DZ 11</string>
    <string name="dz12">DZ 12</string>
    <string name="dz13">DZ 13</string>
    <string name="dz14">DZ 14</string>
    <string name="dz15">DZ 15</string>
    <string name="dz16">DZ 16</string>
    <string name="dz17">DZ 17</string>
    <string name="dz18">DZ 18</string>
    <string name="dz19">DZ 19</string>
    <string name="dz20">DZ 20</string>

    <string name="text_view1">TextView №1</string>
    <string name="text_view2">TextView №2</string>
    <string name="part1">Part 1</string>
    <string name="part2">Part 2</string>
    <string name="url">URL</string>
    <string name="url_picture">https://clck.ru/GgBAr</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">log in</string>
    <string name="download_picture">Download picture</string>
    <string name="forgot">
        <u>Forgot your username/password?</u>
    </string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="name_clock" translatable="false">TISSOT</string>
    <string name="dylan_conner">Dylan Conner</string>
    <string name="trophies">TROPHIES</string>
    <string name="following">FOLLOWING</string>
    <string name="followers">FOLLOWERS</string>
    <string name="trophies_count">4</string>
    <string name="following_count">54</string>
    <string name="followers_count">12</string>
    <string name="name">NAME</string>
    <string name="age">AGE</string>
    <string name="country">COUNTRY</string>
    <string name="postal_code">POSTAL CODE</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="gender">GENDER</string>
    <string name="height">HEIGHT</string>
    <string name="phone">PHONE</string>
    <string name="name_text">Nial Brockman</string>
    <string name="country_text">USA</string>
    <string name="postal_code_text">60604</string>
    <string name="date_of_birth_text">Feb.21,2000</string>
    <string name="gender_text">Male</string>
    <string name="height_text">"6'1''"</string>
    <string name="phone_text">(781)547–3320</string>

    <string name="name_student">Name Student</string>
    <string name="id_student" translatable="false">ID Student</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="enter_age">Enter age</string>
    <string name="age_integer" translatable="false">Age must be an integer</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_url">Enter URL</string>
    <string name="not_valid_url">Not valid URL</string>
    <string name="url_debug" translatable="false">https://clck.ru/Gx4Nd</string>
    <string name="anonymous">Anonymous</string>
    <string name="image_not_found">Image not found</string>
    <string name="id_not_found">ID not found</string>
    <string name="student_not_found">Student not found</string>

    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>

    <string name="map_is_empty" translatable="false">Map is empty</string>
    <string name="mapView_is_empty" translatable="false">MapView is empty</string>
    <string name="heading_is_empty" translatable="false">Heading is empty</string>
    <string name="coordinate_is_empty" translatable="false">Coordinate is empty</string>
    <string name="rate_zoom_map" translatable="false">5</string>

    <string name="default_value" translatable="false">-1</string>

</resources>