<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:background="@color/menu">

        <Button
                android:id="@+id/dz0"
                style="@style/ButtonActivityMenu"
                android:text="@string/dz0"/>
        <Button
                android:id="@+id/dz1"
                style="@style/ButtonActivityMenu"
                android:text="@string/dz1"/>
        <Button
                android:id="@+id/dz2"
                style="@style/ButtonActivityMenu"
                android:text="@string/dz2"/>
        <Button
                android:id="@+id/dz3"
                style="@style/ButtonActivityMenu"
                android:text="@string/dz3"/>
        <Button
                android:id="@+id/dz4"
                style="@style/ButtonActivityMenu"
                android:text="@string/dz4"/>
        <Button
                android:id="@+id/dz5"
                style="@style/ButtonActivityMenu"
                android:text="@string/dz5"/>
        <Button
                android:id="@+id/dz6"
                style="@style/ButtonActivityMenu"
                android:text="@string/dz6"/>
        <Button
                android:id="@+id/dz7"
                style="@style/ButtonActivityMenu"
                android:text="@string/dz7"/>
        <Button
                android:id="@+id/dz8"
                style="@style/ButtonActivityMenu"
                android:text="@string/dz8"/>
        <Button
                android:id="@+id/dz9"
                style="@style/ButtonActivityMenu"
                android:text="@string/dz9"/>
        <Button
                android:id="@+id/dz10"
                style="@style/ButtonActivityMenu"
                android:text="@string/dz10"/>
        <Button
                android:id="@+id/dz11"
                style="@style/ButtonActivityMenu"
                android:text="@string/dz11"/>
        <Button
                android:id="@+id/dz12"
                style="@style/ButtonActivityMenu"
                android:text="@string/dz12"/>

    </LinearLayout>
</ScrollView>