<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/black">

    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_notifications_white_24dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="25dp"
    />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@color/loginEditText"
                android:layout_marginStart="40dp"
        />
        <TextView
                android:drawablePadding="@android:dimen/thumbnail_width"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingStart="25dp"
                android:paddingEnd="10dp"
                android:text="@string/dylan_conner"
                android:textSize="25sp"
                android:fontFamily="@font/monda_bold"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                android:layout_toEndOf="@+id/avatar"/>
    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <LinearLayout
                android:id="@+id/trophies_LinearLayout"
                style="@style/TrophiesLinearLayout">
            <TextView
                    android:id="@+id/trophies_TextView"
                    android:text="@string/trophies"
                    style="@style/TrophiesTextView"/>
            <TextView
                    android:id="@+id/count_trophies"
                    android:text="@string/trophies_count"
                    style="@style/CountTrophiesTextView"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/following_LinearLayout"
                style="@style/TrophiesLinearLayout"
                android:layout_toEndOf="@id/trophies_LinearLayout"
                android:layout_marginStart="30dp">
            <TextView
                    android:id="@+id/following_TextView"
                    android:text="@string/following"
                    style="@style/TrophiesTextView"/>
            <TextView
                    android:id="@+id/count_following"
                    android:text="@string/following_count"
                    style="@style/CountTrophiesTextView"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/followers_LinearLayout"
                style="@style/TrophiesLinearLayout"
                android:layout_toEndOf="@id/following_LinearLayout"
                android:layout_marginStart="30dp">
            <TextView
                    android:id="@+id/followers_TextView"
                    android:text="@string/followers"
                    style="@style/TrophiesTextView"/>
            <TextView
                    android:id="@+id/count_followers"
                    android:text="@string/followers_count"
                    style="@style/CountTrophiesTextView"/>
        </LinearLayout>

    </RelativeLayout>

    <View android:layout_width="wrap_content"
          android:layout_height="2dp"
          android:layout_margin="5dp"
          android:background="@color/loginEditText"/>

    <LinearLayout
            style="@style/NameLinearLayout">
        <TextView
                android:text="@string/name"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
        <TextView
                android:text="@string/name_text"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
    </LinearLayout>
    <LinearLayout
            style="@style/NameLinearLayout">
        <TextView
                android:text="@string/country"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
        <TextView
                android:text="@string/country_text"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
    </LinearLayout>
    <LinearLayout
            style="@style/NameLinearLayout">
        <TextView
                android:text="@string/postal_code"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
        <TextView
                android:text="@string/postal_code_text"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
    </LinearLayout>
    <LinearLayout
            style="@style/NameLinearLayout">
        <TextView
                android:text="@string/date_of_birth"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
        <TextView
                android:text="@string/date_of_birth_text"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
    </LinearLayout>
    <LinearLayout
            style="@style/NameLinearLayout">
        <TextView
                android:text="@string/gender"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
        <TextView
                android:text="@string/gender_text"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
    </LinearLayout>
    <LinearLayout
            style="@style/NameLinearLayout">
        <TextView
                android:text="@string/height"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
        <TextView
                android:text="@string/height_text"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
    </LinearLayout>
    <LinearLayout
            style="@style/NameLinearLayout">
        <TextView
                android:text="@string/phone"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
        <TextView
                android:text="@string/phone_text"
                style="@style/TrophiesTextView"
                android:layout_weight="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

</LinearLayout>