<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/photo_details_student"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            style="@style/NameStudentTextView"
            android:layout_weight="2"
            android:text="@string/name" />

        <TextView
            android:id="@+id/name_details_student"
            style="@style/NameStudentTextView_text"
            android:layout_weight="3"
            android:text="@string/name_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            style="@style/NameStudentTextView"
            android:layout_weight="2"
            android:text="@string/age" />

        <TextView
            android:id="@+id/age_details_student"
            style="@style/NameStudentTextView_text"
            android:layout_weight="3"
            android:text="32" />
    </LinearLayout>

    <view
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/delete"
            android:text="@string/delete"
            style="@style/delete_button"/>
        <Button
            android:id="@+id/edit"
            android:text="@string/edit"
            style="@style/delete_button"/>
    </LinearLayout>

</LinearLayout>