<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/menu"
              android:paddingStart="50dp"
              android:paddingEnd="50dp"
              android:layout_weight="1">

    <EditText
            android:id="@+id/urlEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/ic_mode_edit_white_24dp"
            android:inputType="textUri"
            android:hint="@string/enter_url"
            style="@style/LoginEditText"
            android:background="@drawable/edit_text_shape"/>

    <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/ic_mode_edit_white_24dp"
            android:inputType="text"
            android:hint="@string/enter_name"
            style="@style/LoginEditText"
            android:background="@drawable/edit_text_shape"/>

    <EditText
            android:id="@+id/ageEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/ic_mode_edit_white_24dp"
            android:inputType="numberDecimal"
            android:hint="@string/enter_age"
            style="@style/LoginEditText"
            android:background="@drawable/edit_text_shape"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="25dp"
            android:background="@color/add_button"
            android:textSize="@dimen/save_button_text"
            android:text="@string/save"/>

</LinearLayout>