<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_bg"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingStart="30dp"
                  android:paddingEnd="30dp">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_logo"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="36dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:drawableStart="@drawable/ic_login_name"
                android:drawablePadding="16dp"
                android:background="@color/loginEditText"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:hint="@string/username"
                android:textCursorDrawable="@null"
                android:textColorHighlight="@color/textColorHighlight"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:fontFamily="@font/monda_regular"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="18dp"
                android:drawableStart="@drawable/ic_login_password"
                android:inputType="text"
                android:hint="@string/password"
                style="@style/LoginEditText"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:textSize="30sp"
                android:text="@string/login"
                android:background="@color/login"
                android:textColor="@android:color/white"
        />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:layout_marginTop="18dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:textSize="16sp"
                android:text="@string/create_account"
                android:background="@color/create_account"
                android:textColor="@android:color/white"
                android:textAllCaps="false"/>

    </LinearLayout>

</FrameLayout>